--- a/music/technical.css
+++ b/music/technical.css
@@ -5,7 +5,7 @@ html * {
 
 body {
 	padding: 10px 0px 0 50px;
-  	background-image: url("bg2.jpg");
+  	background-image: url("bg.jpg");
   	background-repeat:
 }
 .head {
